--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,8 @@ colorama==0.4.4
 dnspython==2.0.0
 docker==4.3.1
 Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-PyMongo==2.3.0
 idna==2.10
 isort==5.6.4
 itsdangerous==1.1.0
@@ -15,6 +17,9 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pylint==2.6.0
+pymongo==3.11.3
+python-dotenv==0.15.0
+pytz==2021.1
 requests==2.24.0
 six==1.15.0
 toml==0.10.1
